<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Banner -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/programming_esigala" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-medium"
            android:shadowColor="#000000"
            android:shadowDx="-2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:text="@string/title"
            android:textColor="@color/textColorPrimaryInverse"
            android:textSize="@dimen/text_size_h1"
            android:textStyle="bold|italic" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/level2"
                android:layout_marginLeft="@dimen/level1"
                android:layout_marginRight="@dimen/level1"
                android:layout_marginTop="@dimen/level3"
                android:text="@string/about"
                android:textSize="@dimen/text_size_h4"
                android:textStyle="bold|italic" />

            <!-- Hours Open -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/icon_dimen"
                    android:layout_height="@dimen/icon_dimen"
                    android:layout_margin="@dimen/level1"
                    android:src="@drawable/open" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/hours" />

            </LinearLayout>

            <!-- Facebook -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/icon_dimen"
                    android:layout_height="@dimen/icon_dimen"
                    android:layout_margin="@dimen/level1"
                    android:src="@drawable/facebook" />

                <TextView
                    android:id="@+id/text_view_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/facebook" />

            </LinearLayout>

            <!-- Website -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/icon_dimen"
                    android:layout_height="@dimen/icon_dimen"
                    android:layout_margin="@dimen/level1"
                    android:src="@drawable/www" />

                <TextView
                    android:id="@+id/text_view_webpage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:autoLink="web"
                    android:gravity="center_vertical"
                    android:text="@string/website" />

            </LinearLayout>

            <!-- Location -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/icon_dimen"
                    android:layout_height="@dimen/icon_dimen"
                    android:layout_margin="@dimen/level1"
                    android:src="@drawable/location" />

                <TextView
                    android:id="@+id/text_view_location"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/location" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</LinearLayout>
